--- a/static/styles.css
+++ b/static/styles.css
@@ -1,1 +1,58 @@
+.table {
+    background-color: #f5f5f5;
+    border: 10px solid #e5e5e5;
+}
+
+.table__row:nth-child(even){
+    background-color: #e5e5e5;
+}
+
+.table__header{
+    text-align: left;
+    padding: 25px;
+    
+}
+
+.table__cell{
+    padding: 8px;
+}
+
+body{
+    
+    background-image: url("https://turtleclubbaseball.com/domains/turtleclubbaseball.com/logo.png")
+}
+
+.header{
+    background: #ecc265;
+    color: #084c3c;
+    font-size: 30px;
+    
+}
+
+.caption{
+    font-size: 25px;
+    font-weight: bold;
+    background-color: #e5e5e5;
+    position: relative;  
+    /* height: 20px; */
+    text-align: center;
+    white-space: pre-line;         
+        
+
+}
+
+.caption4{
+    background-color: purple;
+}
+
+.caption3{
+    background-color: transparent;
+}
+
+.caption2{
+    background-color: transparent;
+}
+
+
+
 
